# DiffSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
differentiable/: Diff.ipynb  Plotting_and_computing_finite_gradients.ipynb  backpropagation.py  imgui.ini  main.py  main2.py  main2_tilt.py  mainN.py  mainN4.py  main_tilt.py  meansquareloss.py  paramters.csv  paramters_cilinder.csv  paramters_gioconda.csv  paramters_throw.csv  record_shape.csv  record_throw.csv  record_throw_old.csv  save_simulation.py  save_simulation_velocities.py  simulation_functions.py  solve_system.py  test.py  visualize.py  visualize_shapes.py
include/: contact.hpp  edge.hpp  gravity.hpp  interaction_manager.hpp  linear_algebra.hpp  mesh_boundary.hpp  physics_state.hpp  pysimulation.hpp  simulable.hpp  simulable_generators.hpp  simulation.hpp  simulation_parameters.hpp  spring.hpp  two_body_helper.hpp  utility_functions.hpp
src/: contact.cpp  edge.cpp  free_particle.cpp  gen_mesh_plane.cpp  gravity.cpp  integrate.cpp  main.cpp  mass_spring.cpp  mesh_boundary.cpp  py_free_particle.cpp  pybinding.cpp  pysimulation.cpp  spring.cpp  two_body_helper.cpp  utility_functions.cpp
